--- a/Close Friend/Info.plist
+++ b/Close Friend/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<string></string>
 	<key>NSContactsUsageDescription</key>
 	<string>To import your contacts we need your permission</string>
 	<key>CFBundleDevelopmentRegion</key>
